# travel-ai-assistant

./: .env  .gitignore  README.md  evaluate.py  evaluate_cases.py  main.py  pyproject.toml  weather_test.py
agents/: optimizer.py  planner.py  reporter.py
prompts/: fastest.txt  scenic.txt  weather.txt
tools/: budget.py  llm_factory.py  pois.py  routes.py  search.py  weather.py
